# CCP

./: .gitignore  Cargo.toml  README.org  ccp-polo.db.wal  dcp-devel.db.wal
.github/workflows/: check.yml  test.yml
db/: .managed.json  meta.json
ingest/: 09_11_23-Inferno-Smoke_Defuse_Nade_After_Kill.json  09_11_23-Inferno-Smoke_Defuse_Nade_After_Kill.srt  09_11_23-Inferno-Smoke_Defuse_Nade_After_Kill.tsv  09_11_23-Inferno-Smoke_Defuse_Nade_After_Kill.txt  09_11_23-Inferno-Smoke_Defuse_Nade_After_Kill.vtt  18_11_23-Vertigo-AFD_Callout_Nazis.srt  18_11_23-Vertigo-AFD_Callout_Nazis.tsv  18_11_23-Vertigo-AFD_Callout_Nazis.txt  18_11_23-Vertigo-AFD_Callout_Nazis.vtt  25_11_23-Overpass-Sentences_Never_Said_Before_AFD.srt  25_11_23-Overpass-Sentences_Never_Said_Before_AFD.tsv  25_11_23-Overpass-Sentences_Never_Said_Before_AFD.txt  25_11_23-Overpass-Sentences_Never_Said_Before_AFD.vtt  Inferno_SchWAP_28_10_23.srt  Inferno_SchWAP_28_10_23.tsv  Inferno_SchWAP_28_10_23.txt  Inferno_SchWAP_28_10_23.vtt  out.srt  out.tsv  out.txt  out.vtt  out2.srt  out2.tsv  out2.txt  out2.vtt  test.srt  test.tsv  test.txt  test.vtt
src/: application.rs  arguments.rs  command.rs  config.rs  database.rs  entry.rs  executor.rs  handler.rs  id.rs  interface.rs  main.rs  metadata.rs  processor.rs  root.rs  terminal.rs  update.rs  util.rs
src/application/: actions.rs  entry.rs  filelist.rs  id.rs  indexed.rs  job.rs  metadata.rs  mod.rs  parse_date.rs  processor.rs  status.rs  tag.rs  timestamp.rs
src/interface/: dashboard.rs  execute.rs  footer.rs  header.rs  import.rs  list.rs  mod.rs  search.rs  settings.rs
src/store/: config.rs  docstore.rs  entity.rs  item.rs  mod.rs  searcher.rs
