[package]
name = "ccp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.4", features = ["derive"] }
crossterm = "0.27.0"
lazy_static = "1.4.0"
polodb_core = "4.4.0"
rand = "0.8.5"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tantivy = "0.21.1"
tokio = { version = "1.32.0", features = ["rt", "full"] }
tui-big-text = "0.2.1"
tui-textarea = "0.3.1"
uuid = { version = "1.4.1", features = ["v4"] }
